# ARMgo

./: README.md  Timer.c  config.xml  debug.bat  go.mod  gpio_init.c  main.go
Config/: config.go  create.go  gd32CodeCreate.go  stm32CodeCreate.go
Peripheral/: gpio.go  timerCode.go  usart.go
touchlib_6017/: CMakeLists.txt  GPIO_Init.c  GPIO_Init.d  GPIO_Init.h  GPIO_Init.p1  GPIO_Init.pre  Readme.txt  beep.c  beep.d  beep.h  beep.lpp  beep.p1  beep.pre  control.c  control.d  control.h  control.lpp  control.p1  control.pre  display.c  display.d  display.h  display.lpp  display.p1  display.pre  doprnt.d  doprnt.p1  doprnt.pre  eeprom.c  eeprom.d  eeprom.h  eeprom.lpp  eeprom.p1  eeprom.pre  encoder.c  encoder.d  encoder.h  encoder.lpp  encoder.p1  encoder.pre  (+81 more)
touchlib_6017/HARDWARE/: GPIO_Init.c  GPIO_Init.h  Key.c  Key.h  TM1640B.c  TM1640B.h  beep.c  beep.h  control.c  control.h  display.c  display.h  eeprom.c  eeprom.h  encoder.c  encoder.h  irkey.c  irkey.h  set.c  set.h  timer.c  timer.h  tm1629b.c  tm1629b.h  touchkey.c  touchkey.h  uart1.c  uart1.h  uart2.c  uart2.h  voice.c  voice.h
